2017-02-26  Sam Steingold  <sds@gnu.org>

	Fix bug#679: when a stream returned by MAKE-STREAM has a path,
	the stream should be an acceptable argument to TRUENAME.
	* stream.d (handle_pathname): Call TRUENAME instead of PATHNAME.
	(handle_to_stream): Set both pathname and truename.

2017-02-26  Sam Steingold  <sds@gnu.org>

	* modules/asdf/asdf.lisp: Upgrade to upstream 3.2.0.
	* Makefile.devel (ASDF_URL): Use https.

2017-02-26  Bruno Haible  <bruno@clisp.org>

	Fix error when running the ansi-tests (regression from 2016-08-26).
	* makemake.in: Use clispload.lisp instead of clispload.lsp.

2017-02-26  Bruno Haible  <bruno@clisp.org>

	Make it possible to use Makefile.devel from a source distribution.
	* Makefile.devel (SOURCES7): Add version.sh.

2017-02-26  Bruno Haible  <bruno@clisp.org>

	maint: Add facility for testing builds in different configurations.
	* lispbibl.d: Reorganize comments about flags that can be set in CFLAGS.
	* configure: Write log files cbcstep1.log, cbcstep2.log, cbcstep3.log.
	* Makefile.devel (multibuild-porting32-gcc, build-porting32-gcc-*): New
	targets.
	(multibuild-porting32-cc, build-porting32-cc-*): New targets.
	(multibuild-porting64-gcc, build-porting64-gcc-*): New targets.
	(multibuild-porting64-cc, build-porting64-cc-*): New targets.

2017-02-26  Bruno Haible  <bruno@clisp.org>

	Use CFLAGS that avoid strict type-based aliasing.
	Without it, at least some version of gcc miscompiles 'update_instance'
	in record.d.
	* makemake.in (XCFLAGS): Add -fno-strict-aliasing or the equivalent
	option for other compilers.
	Reported by Jerry James <loganjerry@gmail.com> in
	<https://sourceforge.net/p/clisp/mailman/message/35687181/>.

2017-02-26  Bruno Haible  <bruno@clisp.org>

	Recognize the Sun compiler also on Solaris/x86.
	* makemake.in (XCC_SUNPRO): Use without testing whether TSYS is 'sun4'.

2017-02-26  Bruno Haible  <bruno@clisp.org>

	Fix build failures on Solaris 10 with gcc.
	* configure: On Solaris, force CONFIG_SHELL to bash.